--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body class="bg-gray-100">
-    <section class="bg-top bg-contain h-screen airbnb-bg md:bg-cover bg-no-repeat bg-fixed md:bg-center">
+    <!-- landing page -->
+    <section class="relative bg-top bg-contain h-screen airbnb-bg md:bg-cover bg-no-repeat bg-fixed md:bg-center">
         <!-- Header -->
         <header class="flex justify-between items-center py-6 bg-transparent">
             <div class="flex-shrink-0 ml-5 cursor-pointer">
@@ -44,7 +45,7 @@
             </ul>
         </header>
         <!-- Mobile button -->
-        <div id="main-nav" class="hidden absolute inset-0 z-10 w-full bg-white h-screen overflow-y-scroll">
+        <div id="main-nav" class="hidden fixed inset-0 z-10 w-full bg-white h-screen overflow-y-scroll translate-nav">
             <div class="block p-4 pl-5 pt-6">
                 <svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 2em; width: 2em; display: inline-block; fill: #ff5a5f;"><path d="m499.3 736.7c-51-64-81-120.1-91-168.1-10-39-6-70 11-93 18-27 45-40 80-40s62 13 80 40c17 23 21 54 11 93-11 49-41 105-91 168.1zm362.2 43c-7 47-39 86-83 105-85 37-169.1-22-241.1-102 119.1-149.1 141.1-265.1 90-340.2-30-43-73-64-128.1-64-111 0-172.1 94-148.1 203.1 14 59 51 126.1 110 201.1-37 41-72 70-103 88-24 13-47 21-69 23-101 15-180.1-83-144.1-184.1 5-13 15-37 32-74l1-2c55-120.1 122.1-256.1 199.1-407.2l2-5 22-42c17-31 24-45 51-62 13-8 29-12 47-12 36 0 64 21 76 38 6 9 13 21 22 36l21 41 3 6c77 151.1 144.1 287.1 199.1 407.2l1 1 20 46 12 29c9.2 23.1 11.2 46.1 8.2 70.1zm46-90.1c-7-22-19-48-34-79v-1c-71-151.1-137.1-287.1-200.1-409.2l-4-6c-45-92-77-147.1-170.1-147.1-92 0-131.1 64-171.1 147.1l-3 6c-63 122.1-129.1 258.1-200.1 409.2v2l-21 46c-8 19-12 29-13 32-51 140.1 54 263.1 181.1 263.1 1 0 5 0 10-1h14c66-8 134.1-50 203.1-125.1 69 75 137.1 117.1 203.1 125.1h14c5 1 9 1 10 1 127.1.1 232.1-123 181.1-263.1z"></path></svg>
                 <svg class="collapse-button" viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: .75em; width: .75em; display: inline-block; fill: #4d4d4d; transform: rotate(180deg);"><path d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z" fill-rule="evenodd"></path></svg>
@@ -121,6 +122,24 @@
                         <button class="p-3 bg-red-600 text-white px-6 font-semibold rounded">Search</button>
                     </div>
                 </form>
+            </div>
+        </div>
+    </section>
+    <!-- Explore -->
+    <section class="relative px-5 my-20 lg:px-20 lg:my-10">
+        <h2 class="block text-xl whitespace-normal tracking-normal leading-normal font-semibold antialiased text-gray-800 mb-8">Explore Airbnb</h2>
+        <div class="flex justify-between">
+            <div class="block pb-5 lg:p-0 lg:flex items-center w-30 lg:h-20 shadow rounded-lg">
+                <img src="assets/images/8b7519ec-2c82-4c09-8233-fd4d2715bbf9.jpg" class="h-20 md:h-32 lg:h-20 w-full lg:w-1/2 rounded-t-lg lg:rounded-l-lg lg:rounded-t-none mr-4" alt="">
+                <p class="pl-1 md:pl-5 pt-3 lg:p-0">Stays</p>
+            </div>
+            <div class="block pb-5 lg:p-0 lg:flex items-center w-30 lg:h-20 shadow rounded-lg">
+                <img src="assets/images/a77ee672-e790-4362-8cc5-52bec1371ece.jpg" class="h-20 md:h-32 lg:h-20 w-full lg:w-1/2 rounded-t-lg lg:rounded-l-lg lg:rounded-t-none mr-4" alt="">
+                <p class="pl-1 md:pl-5 pt-3 lg:p-0">Experiences</p>
+            </div>
+            <div class="block pb-5 lg:p-0 lg:flex items-center w-30 lg:h-20 shadow rounded-lg">
+                <img src="assets/images/38f2bfd6-1f4d-46d7-babf-61657deef302.jpg" class="h-20 md:h-32 lg:h-20 w-full lg:w-1/2 rounded-t-lg lg:rounded-l-lg lg:rounded-t-none mr-4" alt="">
+                <p class="pl-1 md:pl-5 pt-3 lg:p-0">Adventures</p>
             </div>
         </div>
     </section>
