--- a/public/index.html
+++ b/public/index.html
@@ -108,11 +108,11 @@
                     <div class="flex w-full">
                         <div class="w-2/4">
                             <p class="text-xs mt-3 mb-2 whitespace-normal tracking-normal leading-normal font-semibold antialiased text-gray-800 uppercase">Check-in</p>
-                            <input class="pl-5 p-3 block w-full text-gray-700 whitespace-normal tracking-normal leading-normal border rounded-l bg-transparent outline-none focus:shadow-outline-none focus:border-green-400" type="date" placeholder="Anywhere">
+                            <input class="pl-5 p-3 block w-full text-gray-700 whitespace-normal tracking-normal leading-normal border rounded-l bg-transparent outline-none focus:shadow-outline-none focus:border-green-400" type="date" placeholder="yyyy-mm-dd">
                         </div>
                         <div class="w-2/4">
                             <p class="text-xs mt-3 mb-2 whitespace-normal tracking-normal leading-normal font-semibold antialiased text-gray-800 uppercase">Checkout</p>
-                            <input class="pl-5 p-3 block w-full text-gray-700 whitespace-normal tracking-normal leading-normal border rounded-r bg-transparent outline-none focus:shadow-outline-none focus:border-green-400" type="date" placeholder="Anywhere">
+                            <input class="pl-5 p-3 block w-full text-gray-700 whitespace-normal tracking-normal leading-normal border rounded-r bg-transparent outline-none focus:shadow-outline-none focus:border-green-400" type="date" placeholder="yyyy-mm-dd">
                         </div>
                     </div>
                     <div class="block w-full">
