--- a/public/index.html
+++ b/public/index.html
@@ -158,35 +158,35 @@
         <h2 class="block text-xl whitespace-normal tracking-normal leading-normal font-semibold antialiased text-gray-800">Introducing Airbnb Adventures</h2>
         <p class="block text-base whitespace-normal tracking-normal leading-normal font-normal antialiased text-gray-600 mb-6">Multi-day trips led by local experts—activities, meals, and stays included</p>
         <div class="flex flex-wrap lg:flex justify-between">
-            <div class="pb-5 lg:flex flex-col w-48 lg:w-percent-19 h-auto rounded-lg">
+            <div class="pb-5 lg:flex flex-col w-48 md:w-30 lg:w-percent-19 h-auto rounded-lg">
                 <img src="assets/images/9f92d6f2-3c82-415d-9663-57314fe2da82.jpg" class="h-screen-40 lg:h-screen-50 w-full rounded-lg " alt="">
                 <p class="text-sm antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2">Indonesia</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Jungle retreat camping in Bali</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">From $139/person - 2 days</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 1em; width: 1em; fill: currentcolor; display:inline-block;"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.99 (138)</p>
             </div>
-            <div class="pb-5 lg:flex flex-col w-48 lg:w-percent-19 h-auto rounded-lg">
+            <div class="pb-5 lg:flex flex-col w-48 md:w-30 lg:w-percent-19 h-auto rounded-lg">
                 <img src="assets/images/45dc57ae-6bfe-42c1-961e-1291d216cc01.jpg" class="h-screen-40 lg:h-screen-50 w-full rounded-lg " alt="">
                 <p class="text-sm antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2">United Kingdom</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Surf, Coasteer & Wild Camp in Cornwall</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">From $213/person - 2 days</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 1em; width: 1em; fill: currentcolor; display:inline-block;"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 5.0 (21)</p>
             </div>
-            <div class="pb-5 lg:flex flex-col w-48 lg:w-percent-19 h-auto rounded-lg">
+            <div class="pb-5 lg:flex flex-col w-48 md:w-30 lg:w-percent-19 h-auto rounded-lg">
                 <img src="assets/images/581391d7-8b4f-4dc1-ba75-2ef833f6709a.jpg" class="h-screen-40 lg:h-screen-50 w-full rounded-lg " alt="">
                 <p class="text-sm antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2">Thailand</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Farm stay in the Thai countryside</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">From $154/person - 2 days</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 1em; width: 1em; fill: currentcolor; display:inline-block;"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.93 (93)</p>
             </div>
-            <div class="pb-5 lg:flex flex-col w-48 lg:w-percent-19 h-auto rounded-lg">
+            <div class="pb-5 lg:flex flex-col w-48 md:hidden lg:w-percent-19 h-auto rounded-lg">
                 <img src="assets/images/e14bbfbf-e1fe-45a2-8fce-44d6e5d2c509.jpg" class="h-screen-40 lg:h-screen-50 w-full rounded-lg " alt="">
                 <p class="text-sm antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2">Vietnam</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Discover majestic Lan Ha Bay</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">From $173/person - 3 days</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 1em; width: 1em; fill: currentcolor; display:inline-block;"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.91 (23)</p>
             </div>
-            <div class="pb-5 lg:flex flex-col w-48 lg:w-percent-19 h-auto rounded-lg">
+            <div class="pb-5 lg:flex flex-col hidden md:hidden lg:w-percent-19 h-auto rounded-lg">
                 <img src="assets/images/e1833c17-0665-47a1-8166-a15b46a0a4d3.jpg" class="h-screen-40 lg:h-screen-50 w-full rounded-lg " alt="">
                 <p class="text-sm antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2">Malaysia</p>
                 <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Experience Life in a Native Village</p>
