--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
         </div>
         <!-- privacy and terms button -->
         <div class="hidden md:block">
-            <div class="fixed bottom-0 right-0 p-3">
+            <div class="fixed bottom-0 right-0 p-3 z-10">
                 <button class="flex text-gray-700 bg-white py-2 px-6 justify-center align-middle items-center rounded-lg">
                     <svg class="mr-1" viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 15px; width: 15px; display: block; fill: currentcolor;"><path d="m17 9c0-4.42-3.58-8-8-8s-8 3.58-8 8 3.58 8 8 8 8-3.58 8-8m1 0c0 4.97-4.03 9-9 9s-9-4.03-9-9 4.03-9 9-9 9 4.03 9 9m-9-5.25c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25m0 4.25c.55 0 1 .45 1 1v5c0 .55-.45 1-1 1s-1-.45-1-1v-5c0-.55.45-1 1-1" fill-rule="evenodd"></path></svg>
                     <span class="whitespace-normal tracking-normal leading-normal font-normal antialiased text-base">Terms, Privacy, & More</span>
