--- a/public/index.html
+++ b/public/index.html
@@ -196,6 +196,61 @@
         </div>
         <a class="text-base whitespace-normal tracking-normal leading-normal font-normal antialiased text-blue-600 hover:underline" href="#">Show all adventures  <i class="fa fa-angle-right"></i></a>
     </section>
+    <!-- places -->
+    <section class="relative px-5 my-20 lg:px-20">
+        <h2 class="block text-xl whitespace-normal tracking-normal leading-normal font-semibold antialiased text-gray-800">Places to stay around the world</h2>
+        <div class="flex flex-wrap lg:flex justify-between">
+            <div class="pb-5 lg:flex flex-col w-24 h-auto rounded-lg">
+                <img src="assets/images/c7b4c7d8_original.jpg" class="h-screen-30 lg:h-screen-30 w-full rounded-lg " alt="">
+                <span class="flex justify-between"><span class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2"><span class="p-1 border border-black rounded">SUPERHOST</span> Twentynine Palms</span><span><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 12px; width: 12px; fill: red; display:inline-block"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.95</span></span>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Tile House</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><strong>$167</strong> / night</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-24 h-auto rounded-lg">
+                <img src="assets/images/af47c32e_original.jpg" class="h-screen-30 lg:h-screen-30 w-full rounded-lg " alt="">
+                <span class="flex justify-between"><span class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-500 uppercase mt-2">Realejo - San Matias</span><span><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 12px; width: 12px; fill: red; display:inline-block"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.72</span></span>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Cave with garden at Sacromonte</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><strong>$55</strong> / night</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-24 h-auto rounded-lg">
+                <img src="assets/images/31e7af5d-f92d-445d-a83e-c1dd13678b89.jpg" class="h-screen-30 lg:h-screen-30 w-full rounded-lg " alt="">
+                <span class="flex justify-between"><span class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2"><span class="p-1 bg-red-800 text-white rounded uppercase">Plus</span> Five Points</span><span><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 12px; width: 12px; fill: red; display:inline-block"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 5.0</span></span>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Historic Carriage House in Denver's Oldest Neighborhood</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><strong>$119</strong> / night</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-24 h-auto rounded-lg">
+                <img src="assets/images/8a093f7e-d602-4487-9399-c2daa11fcc2e.jpg" class="h-screen-30 lg:h-screen-30 w-full rounded-lg " alt="">
+                <span class="flex justify-between"><span class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2"><span class="p-1 border border-black rounded">SUPERHOST</span> Oia</span><span><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 12px; width: 12px; fill: red; display:inline-block"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.95</span></span>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Unique Architecture Cave House</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><strong>$222</strong> / night</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-24 h-auto rounded-lg">
+                <img src="assets/images/8572cc9d_original.jpg" class="h-screen-30 lg:h-screen-30 w-full rounded-lg " alt="">
+                <span class="flex justify-between"><span class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2"><span class="p-1 border border-black rounded">SUPERHOST</span> Twentynine Palms</span><span><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 12px; width: 12px; fill: red; display:inline-block"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.95</span></span>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Tile House</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><strong>$167</strong> / night</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-24 h-auto rounded-lg">
+                <img src="assets/images/da4b9b6b_original.jpg" class="h-screen-30 lg:h-screen-30 w-full rounded-lg " alt="">
+                <span class="flex justify-between"><span class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-500 uppercase mt-2">Realejo - San Matias</span><span><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 12px; width: 12px; fill: red; display:inline-block"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.72</span></span>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Cave with garden at Sacromonte</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><strong>$55</strong> / night</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-24 h-auto rounded-lg">
+                <img src="assets/images/6b9d06f7_original.jpg" class="h-screen-30 lg:h-screen-30 w-full rounded-lg " alt="">
+                <span class="flex justify-between"><span class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2"><span class="p-1 bg-red-800 text-white rounded uppercase">Plus</span> Five Points</span><span><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 12px; width: 12px; fill: red; display:inline-block"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 5.0</span></span>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Historic Carriage House in Denver's Oldest Neighborhood</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><strong>$119</strong> / night</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-24 h-auto rounded-lg">
+                <img src="assets/images/1ae646f5_original.jpg" class="h-screen-30 lg:h-screen-30 w-full rounded-lg " alt="">
+                <span class="flex justify-between"><span class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2"><span class="p-1 border border-black rounded">SUPERHOST</span> Oia</span><span><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 12px; width: 12px; fill: red; display:inline-block"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.95</span></span>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Unique Architecture Cave House</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><strong>$222</strong> / night</p>
+            </div>
+        </div>
+        <a class="text-base whitespace-normal tracking-normal leading-normal font-normal antialiased text-blue-600 hover:underline" href="#">Show all (2000+)  <i class="fa fa-angle-right"></i></a>
+    </section>
 </body>
     <script src="assets/js/main.js"></script>
 </html>
