--- a/public/index.html
+++ b/public/index.html
@@ -251,6 +251,42 @@
         </div>
         <a class="text-base whitespace-normal tracking-normal leading-normal font-normal antialiased text-blue-600 hover:underline" href="#">Show all (2000+)  <i class="fa fa-angle-right"></i></a>
     </section>
+    <!-- Airbnb plus -->
+    <section class="relative px-5 my-20 lg:px-20">
+        <h2 class="block text-xl whitespace-normal tracking-normal leading-normal font-semibold antialiased text-gray-800">Top-rated experiences</h2>
+        <p class="block text-base whitespace-normal tracking-normal leading-normal font-normal antialiased text-gray-600 mb-6">Book activities led by local hosts on your next trip</p>
+        <div class="flex flex-wrap lg:flex justify-between">
+            <div class="pb-5 lg:flex flex-col w-48 md:w-30 lg:w-24 h-auto rounded-lg">
+                <img src="assets/images/e1d37f1a-0edc-4a31-a518-f7da8b2ea630.jpg" class="h-screen-40 lg:h-screen-50 w-full rounded-lg " alt="">
+                <p class="text-sm antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2">Indonesia</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Jungle retreat camping in Bali</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">From $139/person - 2 days</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 1em; width: 1em; fill: currentcolor; display:inline-block;"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.99 (138)</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-48 md:w-30 lg:w-24 h-auto rounded-lg">
+                <img src="assets/images/c0ed26f6-46ec-43b6-870e-ebb535a44db2.jpg" class="h-screen-40 lg:h-screen-50 w-full rounded-lg " alt="">
+                <p class="text-sm antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2">United Kingdom</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Surf, Coasteer & Wild Camp in Cornwall</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">From $213/person - 2 days</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 1em; width: 1em; fill: currentcolor; display:inline-block;"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 5.0 (21)</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-48 md:w-30 lg:w-24 h-auto rounded-lg">
+                <img src="assets/images/2f690952-a2e3-47bc-8736-b98ec3ba60c4.jpg" class="h-screen-40 lg:h-screen-50 w-full rounded-lg " alt="">
+                <p class="text-sm antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2">Thailand</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Farm stay in the Thai countryside</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">From $154/person - 2 days</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 1em; width: 1em; fill: currentcolor; display:inline-block;"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.93 (93)</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-48 md:hidden lg:w-24 h-auto rounded-lg">
+                <img src="assets/images/41af8914-1ddc-49d9-a3bc-b4ad16e841eb.jpg" class="h-screen-40 lg:h-screen-50 w-full rounded-lg " alt="">
+                <p class="text-sm antialiased font-medium leading-normal whitespace-normal text-gray-800 uppercase mt-2">Vietnam</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Discover majestic Lan Ha Bay</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">From $173/person - 3 days</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800"><svg viewBox="0 0 1000 1000" role="presentation" aria-hidden="true" focusable="false" style="height: 1em; width: 1em; fill: currentcolor; display:inline-block;"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg> 4.91 (23)</p>
+            </div>
+        </div>
+        <a class="text-base whitespace-normal tracking-normal leading-normal font-normal antialiased text-blue-600 hover:underline" href="#">Show all experiences  <i class="fa fa-angle-right"></i></a>
+    </section>
 </body>
     <script src="assets/js/main.js"></script>
 </html>
