--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
     </section>
     <!-- places -->
     <section class="relative px-5 my-20 lg:px-20">
-        <h2 class="block text-xl whitespace-normal tracking-normal leading-normal font-semibold antialiased text-gray-800">Places to stay around the world</h2>
+        <h2 class="block text-xl whitespace-normal tracking-normal leading-normal font-semibold antialiased text-gray-800 mb-4">Places to stay around the world</h2>
         <div class="flex flex-wrap lg:flex justify-between">
             <div class="pb-5 lg:flex flex-col w-48 lg:w-24 h-auto rounded-lg">
                 <img src="assets/images/c7b4c7d8_original.jpg" class="h-screen-20 lg:h-screen-1/4 w-full rounded-lg " alt="">
@@ -286,6 +286,31 @@
             </div>
         </div>
         <a class="text-base whitespace-normal tracking-normal leading-normal font-normal antialiased text-blue-600 hover:underline" href="#">Show all experiences  <i class="fa fa-angle-right"></i></a>
+    </section>
+    <!-- Airbnb plus -->
+    <section class="relative px-5 my-20 lg:px-20">
+        <h2 class="block text-xl whitespace-normal tracking-normal leading-normal font-semibold antialiased text-gray-800">Unique places to stay for your next trip</h2>
+        <p class="block text-base whitespace-normal tracking-normal leading-normal font-normal antialiased text-gray-600 mb-6">Book one of these unique spots to escape the ordinary</p>
+        <div class="flex flex-wrap lg:flex justify-between">
+            <div class="pb-5 lg:flex flex-col w-48 md:w-30 lg:w-32 h-auto rounded-lg">
+                <img src="assets/images/0e25bbd4-d081-4bab-85de-a8fd05245b53.jpg" class="h-screen-30 lg:h-screen-38 w-full rounded-lg " alt="">
+                <p class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-600 uppercase mt-2">1,910 treehouses</p>
+                <p class="text-sm antialiased font-semibold leading-normal whitespace-normal text-gray-800">Get some perspective</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Take your trip to new heights with these one-of-a-kind treehouses.</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-48 md:w-30 lg:w-32 h-auto rounded-lg">
+                <img src="assets/images/1df93d87-26a5-4c5e-8a91-b37ccb173aa1.jpg" class="h-screen-30 lg:h-screen-38 w-full rounded-lg " alt="">
+                <p class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-600 uppercase mt-2">1,910 treehouses</p>
+                <p class="text-sm antialiased font-semibold leading-normal whitespace-normal text-gray-800">Get some perspective</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Take your trip to new heights with these one-of-a-kind treehouses.</p>
+            </div>
+            <div class="pb-5 lg:flex flex-col w-48 md:w-30 lg:w-32 h-auto rounded-lg">
+                <img src="assets/images/408ad1e8-0367-4cb7-be52-6d7bfcc9d046.jpg" class="h-screen-30 lg:h-screen-38 w-full rounded-lg " alt="">
+                <p class="text-xs antialiased font-medium leading-normal whitespace-normal text-gray-600 uppercase mt-2">1,910 treehouses</p>
+                <p class="text-sm antialiased font-semibold leading-normal whitespace-normal text-gray-800">Get some perspective</p>
+                <p class="text-sm antialiased font-normal leading-normal whitespace-normal text-gray-800">Take your trip to new heights with these one-of-a-kind treehouses.</p>
+            </div>
+        </div>
     </section>
 
 </body>
