--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta
+      name="description"
+      content="This is a clone of Airbnb using tailwind css"
+    />
     <title>Vacation Rentals, Homes, Experiences &amp; Places - Airbnb</title>
     <link rel="shortcut icon" href="assets/images/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
